Twitter API Task (quick fix)
