# app/Http/Requests/TweetUpdateRequest.php
@@ -1,10 +1,10 @@
 <?php
 
-namespace App\Http\Requests\Api\Tweet;
+namespace App\Http\Requests;
 
 use Illuminate\Foundation\Http\FormRequest;
 
-class TweetRequest extends FormRequest
+class TweetUpdateRequest extends FormRequest
 {
     /**
      * Get the validation rules that apply to the request.
@@ -14,8 +14,6 @@ class TweetRequest extends FormRequest
     public function rules()
     {
         return [
-            "parent_id" => "integer|exists:tweets,id",
-            "retweet_id" => "integer|exists:tweets,id",
             "text" => "required|string|max:280",
         ];
     }
@@ -23,12 +21,6 @@ class TweetRequest extends FormRequest
     public function messages()
     {
         return [
-            "parent_id.integer" => __("locale.tweet.validation.parent_id.integer"),
-            "parent_id.exists" => __("locale.tweet.validation.parent_id.exists"),
-
-            "retweet_id.integer" => __("locale.tweet.validation.retweet_id.integer"),
-            "retweet_id.exists" => __("locale.tweet.validation.retweet_id.exists"),
-
             "text.required" => __("locale.tweet.validation.text.required"),
             "text.string" => __("locale.tweet.validation.text.string"),
             "text.max" => __("locale.tweet.validation.text.max"),
